--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/express": "^4.17.17",
     "@types/express-handlebars": "^6.0.0",
     "@types/express-session": "^1.17.7",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/method-override": "^0.0.32",
     "@types/morgan": "^1.9.4",
     "ts-node": "^10.9.1",
@@ -36,6 +37,7 @@
     "express-handlebars": "^7.0.7",
     "express-session": "^1.17.3",
     "handlebars-dateformat": "^1.1.3",
+    "jsonwebtoken": "^9.0.0",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
     "mysql2": "^3.3.3",
